--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,6 +5,10 @@
     top: 0;
     z-index: 1000;
   }
+  .navbar-brand {
+    display: flex;
+    align-items: center;
+  }
   
   .navbar-content {
     display: flex;
